--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^15.5.0",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
+    "clean-webpack-plugin": "^0.1.16",
     "react-hot-loader": "^3.0.0-beta.7",
     "source-map-loader": "^0.2.1",
     "typescript": "^2.3.3",
