--- a/package.json
+++ b/package.json
@@ -15,10 +15,21 @@
     "@types/react-dom": "^15.5.0",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
+    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-loader": "^2.1.0",
     "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.4",
+    "exports-loader": "^0.6.4",
+    "imports-loader": "^0.7.1",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.7",
+    "resolve-url-loader": "^2.0.3",
+    "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
     "typescript": "^2.3.3",
+    "url-loader": "^0.5.9",
     "webpack": "^2.6.0",
     "webpack-dev-server": "^2.4.5"
   },
