--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
+    "@types/react-router-dom": "^4.0.4",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
     "bootstrap": "^4.0.0-alpha.6",
@@ -24,6 +25,7 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-router-dom": "^4.1.1",
     "resolve-url-loader": "^2.0.3",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
