--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-router-dom": "^4.1.1",
+    "react-timeago": "^3.3.0",
     "resolve-url-loader": "^2.0.3",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
