--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@types/react-router-dom": "^4.0.4",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
-    "bootstrap": "^4.0.0-alpha.6",
-    "bootstrap-loader": "^2.1.0",
+    "bootstrap": "^4.0.0",
+    "bootstrap-loader": "^2.2.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "exports-loader": "^0.6.4",
