Update to webpack 4

--- a/package.json
+++ b/package.json
@@ -4,41 +4,44 @@
   "description": "Personal Beautification Assistant",
   "main": "./docs/bundle.js",
   "dependencies": {
+    "babel-loader": "^7.1.4",
     "expose-loader": "^0.7.3",
-    "html-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^3.0.6",
     "node-static": "^0.7.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.0.38",
+    "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
-    "@types/react-router-dom": "^4.0.4",
-    "@types/webpack-env": "^1.13.0",
-    "awesome-typescript-loader": "^3.1.3",
+    "@types/react-router-dom": "^4.2.4",
+    "@types/webpack-env": "^1.13.5",
+    "awesome-typescript-loader": "^5.0.0-0",
     "bootstrap": "^4.0.0",
     "bootstrap-loader": "^2.2.0",
-    "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.10",
     "exports-loader": "^0.7.0",
     "imports-loader": "^0.8.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "react-router-dom": "^4.1.1",
+    "react-hot-loader": "^4.0.0",
+    "react-router-dom": "^4.2.2",
     "react-timeago": "^3.3.0",
     "resolve-url-loader": "^2.0.3",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.20.2",
-    "typescript": "^2.3.3",
+    "typescript": "^2.7.2",
     "url-loader": "^0.6.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^3.0.0"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0",
+    "webpack-merge": "^4.1.2"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --config webpack.dev.js --open --hot",
     "static": "static -at 0.0.0.0 dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
