--- a/package.json
+++ b/package.json
@@ -5,38 +5,39 @@
   "main": "./docs/bundle.js",
   "dependencies": {
     "babel-loader": "^7.1.4",
-    "expose-loader": "^0.7.3",
-    "html-webpack-plugin": "^3.0.6",
+    "expose-loader": "^0.7.5",
+    "html-webpack-plugin": "^3.2.0",
     "node-static": "^0.7.9",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
   },
   "devDependencies": {
-    "@types/react": "^16.0.40",
-    "@types/react-dom": "^16.0.4",
-    "@types/react-router-dom": "^4.2.4",
-    "@types/webpack-env": "^1.13.5",
-    "awesome-typescript-loader": "^5.0.0-0",
-    "bootstrap": "^4.0.0",
+    "@types/react": "^16.3.10",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/react-select": "^1.2.6",
+    "@types/webpack-env": "^1.13.6",
+    "awesome-typescript-loader": "^5.0.0",
+    "bootstrap": "^4.1.0",
     "bootstrap-loader": "^2.2.0",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "exports-loader": "^0.7.0",
     "imports-loader": "^0.8.0",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.6",
-    "react-hot-loader": "^4.0.0",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.3",
+    "react-hot-loader": "^4.0.1",
     "react-router-dom": "^4.2.2",
     "react-timeago": "^3.3.0",
-    "resolve-url-loader": "^2.0.3",
-    "sass-loader": "^6.0.7",
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.1",
-    "style-loader": "^0.20.2",
-    "typescript": "^2.7.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0",
+    "style-loader": "^0.20.3",
+    "typescript": "^2.8.1",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   },
   "scripts": {
