--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "expose-loader": "^0.7.5",
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.10",
     "node-static": "^0.7.9",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/highlight.js": "^9.12.3",
+    "@types/lodash": "^4.14.109",
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.6",
