--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Personal Beautification Assistant",
   "main": "./docs/bundle.js",
   "dependencies": {
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "expose-loader": "^0.7.5",
     "highlight.js": "^9.12.0",
@@ -18,9 +19,9 @@
   "devDependencies": {
     "@types/highlight.js": "^9.12.3",
     "@types/lodash": "^4.14.109",
-    "@types/react": "^16.3.14",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-router-dom": "^4.2.6",
+    "@types/react": "^16.3.16",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-router-dom": "^4.2.7",
     "@types/react-select": "^1.2.6",
     "@types/webpack-env": "^1.13.6",
     "awesome-typescript-loader": "^5.0.0",
@@ -36,13 +37,13 @@
     "react-router-dom": "^4.2.2",
     "react-timeago": "^4.1.9",
     "resolve-url-loader": "^2.3.0",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^7.0.2",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.21.0",
-    "typescript": "^2.8.4",
+    "typescript": "^2.9.1",
     "url-loader": "^1.0.1",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^2.1.4",
+    "webpack": "^4.11.0",
+    "webpack-cli": "^3.0.2",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
