--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
+        "noUnusedLocals": true,
+        "strictNullChecks": true,
         "module": "commonjs",
         "target": "es6",
         "jsx": "react"
