--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.0",
     "react-highlight": "^0.12.0",
+    "ugly-samples": "git+https://github.com/Unibeautify/ugly-samples.git",
     "unibeautify": "^0.15.0"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "imports-loader": "^0.8.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-timeago": "^4.1.9",
@@ -50,6 +52,7 @@
     "webpack": "^4.11.0",
     "webpack-cli": "^3.0.2",
     "webpack-dev-server": "^3.1.4",
+    "webpack-glob-entry": "^2.1.1",
     "webpack-merge": "^4.1.2"
   },
   "scripts": {
