--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "expose-loader": "^0.7.5",
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^3.2.0",
+    "js-yaml": "^3.12.0",
     "lodash": "^4.17.10",
     "node-static": "^0.7.9",
     "react": "^16.4.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/highlight.js": "^9.12.3",
+    "@types/js-yaml": "^3.11.1",
     "@types/lodash": "^4.14.109",
     "@types/react": "^16.3.17",
     "@types/react-codemirror": "^1.0.1",
