--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@axetroy/react-download": "^1.1.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "codemirror": "^5.38.0",
     "expose-loader": "^0.7.5",
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^3.2.0",
@@ -14,7 +15,7 @@
     "lodash": "^4.17.10",
     "node-static": "^0.7.9",
     "react": "^16.4.0",
-    "react-codemirror": "^1.0.0",
+    "react-codemirror2": "^5.0.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.0",
     "react-highlight": "^0.12.0",
@@ -22,11 +23,11 @@
     "unibeautify": "^0.15.0"
   },
   "devDependencies": {
+    "@types/codemirror": "0.0.57",
     "@types/highlight.js": "^9.12.3",
     "@types/js-yaml": "^3.11.1",
     "@types/lodash": "^4.14.109",
     "@types/react": "^16.3.17",
-    "@types/react-codemirror": "^1.0.1",
     "@types/react-copy-to-clipboard": "^4.2.5",
     "@types/react-dom": "^16.0.6",
     "@types/react-router-dom": "^4.2.7",
