--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "main": "./docs/bundle.js",
   "dependencies": {
     "@axetroy/react-download": "^1.1.1",
+    "@babel/core": "^7.0.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "codemirror": "^5.39.0",
+    "babel-loader": "^8.0.0",
+    "codemirror": "^5.40.0",
     "expose-loader": "^0.7.5",
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.12.0",
     "lodash": "^4.17.10",
     "node-static": "^0.7.9",
-    "react": "^16.4.1",
-    "react-codemirror2": "^5.0.4",
+    "react": "^16.4.2",
+    "react-codemirror2": "^5.1.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.4.2",
     "react-highlight": "^0.12.0",
     "ugly-samples": "git+https://github.com/Unibeautify/ugly-samples.git",
     "unibeautify": "^0.16.0"
@@ -31,7 +32,7 @@
     "@types/react-copy-to-clipboard": "4.2.6",
     "@types/react-dom": "16.0.7",
     "@types/react-router-dom": "4.3.0",
-    "@types/react-select": "1.3.4",
+    "@types/react-select": "2.0.2",
     "@types/webpack-env": "1.13.6",
     "awesome-typescript-loader": "5.2.0",
     "bootstrap": "4.1.3",
