--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@axetroy/react-download": "^1.1.1",
     "@babel/core": "^7.0.0",
+    "@unibeautify/ugly-samples": "git+https://github.com/Unibeautify/ugly-samples.git",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.0",
     "codemirror": "^5.40.0",
@@ -20,7 +21,6 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-highlight": "^0.12.0",
-    "ugly-samples": "git+https://github.com/Unibeautify/ugly-samples.git",
     "unibeautify": "^0.17.0"
   },
   "devDependencies": {
